[gd_scene load_steps=5 format=3 uid="uid://bbs6thqicl6be"]

[ext_resource type="Script" uid="uid://dfc77vxsgp2f4" path="res://game_objects/player/player.gd" id="1_jcgnw"]
[ext_resource type="Texture2D" uid="uid://deoylh3dnpbwl" path="res://game_objects/player/character_beige_idle.svg" id="1_l3qw1"]
[ext_resource type="Texture2D" uid="uid://b5i7k7oayc3xp" path="res://game_objects/player/arrow.png" id="3_gnf7o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ec2f0"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_jcgnw")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_ec2f0")

[node name="AimRoot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -8)

[node name="DirectionArrow" type="Sprite2D" parent="AimRoot"]
unique_name_in_owner = true
texture = ExtResource("3_gnf7o")
offset = Vector2(16, 0)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -16)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_l3qw1")

[node name="LassoRoot" type="Node2D" parent="Visuals"]
unique_name_in_owner = true
position = Vector2(0, -8)

[node name="LassoRaycast" type="RayCast2D" parent="Visuals/LassoRoot"]
unique_name_in_owner = true
target_position = Vector2(1, 0)
collision_mask = 16
